# SharedMobilitySim

./: .gitignore  HOWTO.md  Makefile  README.md  TODO.md  pyproject.toml  requirements.txt
configs/: network_porto10.yaml
control/: baselines.py  policies.py
data/: graph_generator.py
docs/: references.bib  report.tex
docs/report/: report.tex
envs/: porto_env.py
ml/: bandit_contextual_rh.py  bandit_param_arms.py  heuristic_example.py  multi-armed-bandit.py  run_env_agent_template.py  sac.py  search_static_policy.py
ml/logs/: sac_porto_20251230_174953_steps420480.json
scripts/: analyze_results.py  animate_env.py  calibrate_scales.py  eval_policy.py  run_sim.py
sim/: core.py  demand.py  events.py  kpis.py  weather_mc.py
src/configs/: base.yaml  network_lisbon20_s700.yaml  network_porto10.yaml  network_porto20_s600.yaml  network_porto20_s900.yaml
src/control/: planners.py  registry.py
src/data/: graph_generator.py
src/envs/: porto_env.py
src/ml/: bandit_contextual_rh.py  bandit_param_arms.py  heuristic.py  sac.py
src/scripts/: analyze_results.py  animate_env.py  calibrate_scales.py  eval_plots.py  eval_policy.py  run_paper_matrix.sh  sac.sh
src/sim/: core.py  demand.py  events.py  kpis.py
