[project]
name = "SharedMobilitySim"
version = "1.0.0"
description = "Simulation project for management of shared mobility fleets (Topic 7)."
authors = [
    { name = "Eduardo Passos", email = "up202205630@up.pt" },
    { name = "Guilherme Silva", email = "up202205298@up.pt" },
    { name = "Valentina Cadime", email = "up202206262@up.pt" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.8",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "osmnx>=2.0.6",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "stable-baselines3>=2.7.1",
    "tensorboard>=2.20.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250926",
    "ruff>=0.14.6",
    "types-networkx>=3.5.0.20251106",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.ruff]
line-length = 130
extend-exclude = [
    ".git",
    ".nox",
    ".pytest_cache",
    ".mypy_cache",
    ".venv",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    "C90",     # mccabe
    "COM812",  # missing-trailing-comma (avoid conflict with formatter)
    "D100",    # undocumented-public-module
    "D103",    # undocumented-public-function
    "D104",    # undocumented-public-package
    "D107",    # undocumented-public-init
    "D203",    # incorrect-blank-line-before-class
    "D213",    # multi-line-summary-second-line
    "D413",    # missing-blank-line-after-last-section
    "E501",    # line-too-long
    "EM101",   # raw-string-in-exception
    "EM102",   # f-string-in-exception
    "FIX002",  # line-contains-todo
    "G004",    # logging-f-string
    "N803",    # invalid-argument-name (UPPERCASE names allowed for accurate mapping of mathematical formulas' symbols)
    "N806",    # non-lowercase-variable-in-function (same as above)
    "PLR0913", # too-many-arguments
    "PLR2004", # magic-value-comparison
    "S101",    # assert
    "SIM105",  # suppressible-exception
    "T201",    # print
    "TD002",   # missing-todo-author
    "TD003",   # missing-todo-link
    "TRY003",  # raise-vanilla-args
]

mccabe.max-complexity = 10

[tool.ruff.lint.flake8-annotations]
# Suppress ANN401 for *args and **kwargs
allow-star-arg-any = true
